# retail-etl-warehouse

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/reports/: data_quality_report.json
configs/: config.yaml
deployment/kubernetes/: deployment.yaml  service.yaml
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
notebooks/: 01_warehouse_exploration.ipynb
pipelines/: retail_etl_dag.py
sql/marts/: mart_customer_summary.sql  mart_daily_sales_by_store.sql  mart_monthly_sales_by_category.sql
sql/schema/: 01_staging_tables.sql  02_marts_tables.sql
src/: pipeline.py
src/api/: main.py
src/extract/: generate_source_data.py  readers.py
src/load/: warehouse.py
src/quality/: validators.py
src/utils/: config.py  logger.py
tests/: test_generate_source_data.py  test_validators.py  test_warehouse_integration.py
