[project]
name = "retail-etl-warehouse"
version = "1.0.0"
description = "Production-style retail ETL pipeline: extract, data-quality validation, star-schema data warehouse, dbt-style mart models, and a read-only analytics API."
authors = [
    { name = "Muhammad Farooq Shafi", email = "mfarooqsgafee333@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
